# siren_cloud

./: .clang-format  .env  .gitignore  Dockerfile-fingerprint  Makefile  README.md  docker-compose.yml  nginx.conf.conf  shared_auth.conf
fingerprint/: CMakeLists.txt  Dockerfile  main.cpp
fingerprint/proto/: CMakeLists.txt  fingerprint.proto
fingerprint/proxy/src/: main.go
fingerprint/scripts/: build_proxy.sh  elastic_init.sh  postgres_init.sh  start_proxy.sh
fingerprint/src/: service_umbrella.cpp  service_umbrella.h
fingerprint/src/api/: api_umbrella.h  delete_track.cpp  delete_track.h  find_track.cpp  find_track.h  load_track.cpp  load_track.h
fingerprint/src/common/: common.cpp  common.h  request_manager.cpp  request_manager.h  safe_queue.h
fingerprint/src/engine/: engine.cpp  engine.h
fingerprint/src/grpc/: calldata.h  collector.cpp  collector.h  server.h
fingerprint/src/histogram/: entry_layout.h  histogram.cpp  histogram.h
fingerprint/src/logger/: logger.cpp  logger.h
fingerprint/src/storage/: abstract_command.cpp  abstract_command.h  abstract_connection.cpp  abstract_connection.h  abstract_connector.cpp  abstract_connector.h  connection_pool.cpp  connection_pool.h  query.cpp  query.h
fingerprint/src/storage/elastic/: elastic_command.cpp  elastic_command.h  elastic_connection.cpp  elastic_connection.h  elastic_connector.cpp  elastic_connector.h
fingerprint/src/storage/postgres/: postgres_command.cpp  postgres_command.h  postgres_connection.cpp  postgres_connection.h  postgres_connector.cpp  postgres_connector.h
fingerprint/src/thread_pool/: async_manager.h
fingerprint/src/thread_pool/callback/: callback.cpp  callback.h
fingerprint/src/thread_pool/dispatch/: dispatch.cpp  dispatch.h
fingerprint/src/thread_pool/pool/: thread_pool.cpp  thread_pool.h
fingerprint/src/thread_pool/primitives/: task.h  waitable_future.cpp  waitable_future.h
fingerprint/test/: common.cpp  common.h  connection_pool.cpp  elastic.cpp  postgres.cpp  query.cpp  safe_queue.cpp  siren.cpp  thread_pool.cpp
fingerprint/test/cassettes/: American.json  Come Together.json  Come When You Call.json  Country Boy Blue.json  Kashmir.json  Let It Be.json  Strawberry Fields Forever.json  Summertime Sadness.json  We Can Work It Out.json  Yayo.json  master_params.json
metadata/: .env  Dockerfile  mix.exs
metadata/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
metadata/fixture/vcr_cassettes/: delete_record_success.json  post_record_success.json
metadata/lib/: metadata.ex  metadata_web.ex
metadata/lib/metadata/: application.ex  library.ex  repo.ex
metadata/lib/metadata_web/: endpoint.ex  fingerprint_comm.ex  gettext.ex  router.ex  telemetry.ex
metadata/lib/metadata_web/controllers/: album_controller.ex  album_json.ex  artist_controller.ex  artist_json.ex  changeset_json.ex  error_json.ex  fallback_controller.ex  genre_controller.ex  genre_json.ex  record_controller.ex  record_json.ex  single_controller.ex  single_json.ex
metadata/priv/repo/: seeds.exs
metadata/priv/repo/migrations/: 20230512195534_create_artists.exs  20230512195756_create_albums.exs  20230512215422_create_genres.exs  20230512231301_create_records.exs  20230512231402_create_record_credits.exs  20230513125924_create_aldum_records.exs  20230616188532_create_record_genres.exs
metadata/test/: test_helper.exs
metadata/test/metadata/: library_test.exs
metadata/test/metadata_web/controllers/: album_controller_test.exs  artist_controller_test.exs  error_json_test.exs  genre_controller_test.exs  record_controller_test.exs
metadata/test/support/: conn_case.ex  data_case.ex
metadata/test/support/fixtures/: library_fixtures.ex
proto/: CMakeLists.txt  fingerprint.proto
seeder/: setup.py
seeder/data/: sample_dataset.csv
seeder/seeder/: script.py
